--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <title>404 ERROR PAGE</title>
 </head>
 <body>
+<div class="gameboy">  
+    <div class="canvas">  </div>
+</div>
 
-    <section>
-        <div class="marquee">
-            <div class="marquee-text"></div><div class="marquee-text"></div><div class="marquee-text"></div>
-        </div>
-    </section>
-
+    
 <script src="/js/index.js"></script>
 </body>
 </html>
