--- a/index.html
+++ b/index.html
@@ -8,9 +8,33 @@
     <title>404 ERROR PAGE</title>
 </head>
 <body>
+
 <div class="gameboy">  
-    <div class="canvas">  </div>
+    <canvas id="canvas"></canvas>
 </div>
+
+<div id="player-img" >
+    <img id="player" src="/img/player1.svg" alt="">
+</div>
+
+
+<!-- 
+<div class="marquee">
+  <div class="marquee--inner">
+    <span>
+        <div><p> 404 ERROR PAGE NOT FOUND</p></div>
+    </span>
+    <span>
+        <div><p> 404 ERROR PAGE NOT FOUND</p></div>
+    </span>
+    <span>
+        <div><p> 404 ERROR PAGE NOT FOUND</p></div>
+    </span>
+    <span>
+        <div><p> 404 ERROR PAGE NOT FOUND</p></div>
+    </span>
+  </div>
+</div> -->
 
     
 <script src="/js/index.js"></script>
