--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <img id="player" src="/img/player1.svg" alt="">
 </div>
 
+<div id="virus-img" >
+    <img id="coronga" src="/img/coronga.svg" alt="">
+</div>
+
 
 <!-- 
 <div class="marquee">
